# dropsite

./: .env.example  .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  deploy.py  errors.py  main.py  serve.py  siteconfig.py  storage.py
templates/: dashboard.html  landing.html  login.html
tests/: conftest.py  test_auth.py  test_deploy.py  test_integration.py  test_serve.py  test_siteconfig.py
